# fm_server

./: Cargo.toml  setup_db.sql  setup_local_app.sh
scripts/: setup_db.sh  setup_files.sh
src/: main.rs
src/domain/: file.rs  user.rs
src/dto/: mod.rs
src/handlers/: fm.rs
src/handlers/fm/: mod.rs  service.rs
src/infra/: mod.rs
src/infra/db/: mod.rs
src/infra/repositories/: fm_repository.rs  mod.rs
src/routes/: fm.rs  mod.rs
src/utils/: errors.rs  mod.rs  success.rs
