[package]
name = "fm_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum =  { version = "0.8.6", features = ["multipart"] }
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.145"
sonyflake = "0.4.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.47.1", features = ["full"] }
zip = "6.0.0"
